src/test/resources/typeSystemTestModels/valid/classes/ClassNoCircularity.java
package typeSystemTestModels.valid.classes;

import java.lang.String;

public class ClassNoCircularity extends String {

}
